--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://kristinah.github.io/scr/index.html">
+<meta http-equiv="refresh" content="0; url=https://kristinah.github.io/src/index.js">
