--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Flower_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="/dist/output.css" rel="stylesheet">
     <meta
       name="description"
       content="Portfolio of past works"
     />
-    <title>Portfolio</title>
+    <title>Portfolio Kristina Högberg</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
